--- a/hello-spring/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/hello-spring/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.thymeleaf.cache=false
 spring.devtools.restart.enabled=true
-//spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:tcp://localhost/~/spring
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
